[package]
name = "etcd-txn-parser"
version = "0.2.3"
edition = "2024"
homepage = "https://github.com/Akanoa/etcd-txn-parser"
repository = "https://github.com/Akanoa/etcd-txn-parser"
documentation = "https://docs.rs/etcd-txn-parser"
authors = [
    "Akanoa <dev@guern.eu>"
]
description = "An etcd transaction parser"
publish = true
keywords = [
    "elyze",
    "parser",
    "etcd"
]
license-file = "LICENSE"
readme = "Readme.md"

[dependencies]
elyze = "1.5.4"